--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/express-validator": "^3.0.0",
     "@types/mongoose": "^5.7.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "mongoose": "^5.9.7",
     "typescript": "^3.8.3"
   }
