--- a/package.json
+++ b/package.json
@@ -4,21 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --forceExit",
+    "tsc": "./node_modules/typescript/bin/tsc -w",
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/express-validator": "^3.0.0",
+    "@types/jest": "^25.2.1",
     "@types/mongoose": "^5.7.10",
+    "@types/supertest": "^2.0.8",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "jest": "^25.3.0",
     "mongoose": "^5.9.7",
+    "supertest": "^4.0.2",
     "typescript": "^3.8.3"
   }
 }
