--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^25.3.0",
     "mongoose": "^5.9.7",
     "supertest": "^4.0.2",
+    "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   }
 }
