--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "drawful-back",
+  "name": "drawgame-back",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --forceExit",
+    "test": "is_test=true jest --forceExit",
     "tsc": "./node_modules/typescript/bin/tsc -w",
     "start": "nodemon",
     "startProd": "node index.js"
@@ -25,6 +25,7 @@
     "@types/express-validator": "^3.0.0",
     "@types/jest": "^25.2.1",
     "@types/mongoose": "^5.7.10",
+    "@types/node": "^14.0.12",
     "@types/supertest": "^2.0.8",
     "cors": "^2.8.5",
     "express": "^4.17.1",
