Added push command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "is_test=true jest",
     "tsc": "./node_modules/typescript/bin/tsc -w",
     "start": "nodemon",
-    "startProd": "node index.js"
+    "startProd": "node index.js",
+    "push": "docker build -t jbaramidze/drawgame-backend . && docker push jbaramidze/drawgame-backend"
   },
   "keywords": [],
   "author": "",
