--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "cd server && is_test=true jest",
     "start": "cd server && node index.js",
     "build": "npm install && react-scripts build && cd server && npm install && ./node_modules/typescript/bin/tsc",
-    "devBE": "(cd server && ./node_modules/typescript/bin/tsc -w) & (cd server && MONGO_ADDR=mongodb://u:p@localhost:27099 nodemon)",
+    "devBE": "(cd server && ./node_modules/typescript/bin/tsc -w) & (cd server && MONGO_ADDR=mongodb://u:p@localhost:27099/drawgame nodemon)",
     "devFE": "PORT=2000 REACT_APP_BEURL=http://localhost:3000 react-scripts start"
   },
   "eslintConfig": {
