--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript": "^3.9.6"
   },
   "scripts": {
-    "test": "cd server && is_test=true jest",
+    "test": "cd server && is_test=true MONGO_ADDR=mongodb://u:p@localhost:27099/drawgameTest jest",
     "start": "cd server && node index.js",
     "build": "npm install && react-scripts build && cd server && npm install && ./node_modules/typescript/bin/tsc",
     "devBE": "(cd server && ./node_modules/typescript/bin/tsc -w) & (cd server && MONGO_ADDR=mongodb://u:p@localhost:27099/drawgame nodemon)",
