--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^4.5.0",
+    "@types/jest": "^26.0.19",
     "@types/react-canvas-draw": "^1.1.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.14",
