--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^4.5.0",
     "@types/jest": "^26.0.19",
+    "@types/mongoose": "^5.10.3",
     "@types/react-canvas-draw": "^1.1.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.14",
+    "@types/supertest": "^2.0.10",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "jquery": "^1.9.1",
