--- a/server/package.json
+++ b/server/package.json
@@ -26,10 +26,14 @@
     "express-validator": "^6.4.0",
     "jest": "^25.3.0",
     "jest-extended": "^0.11.5",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "mongoose": "^5.9.7",
     "supertest": "^4.0.2",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0"
   }
 }
