Added prettier for FE

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/supertest": "^2.0.10",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "jquery": "^1.9.1",
+    "prettier": "^2.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
     "react-canvas-draw": "^1.1.1",
